# fastapi_sandbox

./: MANIFEST.in  setup.cfg
docker/: realm-export.json
fastapi_sandbox/: app.py  cry_for_help.py  full_example.py
