[metadata]
name = fastapi_sandbox
version = 0.0.0

[options]
python_requires = >=3.7, <3.9
include_package_data = True

packages =
    fastapi_sandbox


install_requires =
    fs_common_lib == 0.12.3
    
    pip >= 20
    fastapi


tests_require =
    pytest
    coverage
    pytest-pep8
    pytest-cov

;[options.entry_points]
;console_scripts =
;    fs-etl = fs_etl.__main__:main
;    fs_etl = fs_etl.__main__:main
