[metadata]
name = fastapi_sandbox
version = 0.0.0

[options]
python_requires = >=3.7, <3.9
include_package_data = True

packages =
    fastapi_sandbox


install_requires =
    pip >= 20
    fastapi
    fastapi_keycloak


tests_require =
    pytest
    coverage
    pytest-pep8
    pytest-cov

;[options.entry_points]
;console_scripts =
;    fs-etl = fs_etl.__main__:main
;    fs_etl = fs_etl.__main__:main
